--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -8,10 +8,10 @@
   src = "src"
   out = "out"
   libs = ["lib"]
+  gas_reports = ["*"]
 
 [profile.remappings]
   solady = "lib/solady"
-
 
 [fmt]
   line_length = 80
