--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,7 @@
 	url = https://github.com/foundry-rs/forge-std
 [submodule "contracts/lib/solady"]
 	path = contracts/lib/solady
-	url = https://github.com/vectorized/solady
+	url = https://github.com/Vectorized/solady
+[submodule "contracts/lib/openzeppelin-contracts"]
+	path = contracts/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
