fex fixes, added few tests cases, added back holder logic

--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -14,5 +14,8 @@
   solady = "lib/solady"
   "@openzeppelin" = "lib/openzeppelin-contracts"
 
+[profile.default.fuzz]
+  runs = 1024
+
 [fmt]
   line_length = 80
